--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "seventhsense/magento2.module.configimportexport",
   "description": "Import/Export core_config_data values in Magento 2",
   "require": {
-    "php": "~7.2.0 || ~7.3.0 || ~7.4.0",
+    "php": "~7.2.0 || ~7.3.0 || ~7.4.0 || ~8.1.0 || ~8.2.0",
     "symfony/yaml": "^3.4 || ^4.0",
     "magento/module-config": "*",
     "magento/module-store": "*",
